Add "Add Product" UI and fix various bugs
